--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="box">
         <canvas id="pinkboard"></canvas>
     </div>
-    <h2 class="name">Nguyễn Thanh Mai</h2>
-    <h3 class="date">16-06-2000</h3>
+    <h2 class="name">I LOVE YOUUU</h2>
+    <h3 class="date">BY HENRY DUONG 2024</h3>
     <script src="main.js"></script>
 </body>
 
